<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".post.presentation.PostFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/frg_post__toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_24">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/frg_post__toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="Главная" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/frg_post__finish_post"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="end|center_horizontal"
            android:background="?selectableItemBackground"
            android:src="@drawable/ic_confirm_24" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/frg_post__v_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frg_post__toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/frg_post__et_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="start|top"
                android:hint="Введите текст..."
                android:inputType="textMultiLine|textCapSentences|textLongMessage"
                android:minHeight="200dp"
                android:minLines="1"
                android:overScrollMode="always"
                android:paddingHorizontal="8dp"
                android:paddingBottom="32dp"
                android:textColor="@color/black"
                android:textColorHint="@color/text_secondary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="321321312dmlsasakdsakldsa" />

            <View
                android:id="@+id/frg_post__divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/frg_post__et_post" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/frg_post__preview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:text="Превью"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frg_post__divider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/frg_post__et_post_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="start|top"
                android:overScrollMode="always"
                android:paddingHorizontal="8dp"
                android:paddingBottom="32dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frg_post__preview_title"
                tools:text="321321312dmlsasakdsakldsa" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/frg_post__mb_add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:backgroundTint="@color/primary_color"
                android:paddingHorizontal="48dp"
                android:paddingVertical="16dp"
                android:text="Добавить фото"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frg_post__et_post_preview"
                app:layout_constraintVertical_bias="1.0"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/frg_post__iv_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:maxHeight="400dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frg_post__et_post_preview"
                tools:src="@tools:sample/avatars"
                tools:visibility="visible" />

            <ImageButton
                android:id="@+id/frg_post__ib_remove_photo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="?selectableItemBackground"
                android:src="@drawable/ic_close_24"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/frg_post__iv_image"
                app:layout_constraintTop_toTopOf="@id/frg_post__iv_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>